fix:koutsuujiko letter spacing

--- a/src/scss/utility/_letter-spacing.scss
+++ b/src/scss/utility/_letter-spacing.scss
@@ -25,4 +25,7 @@ letter-spacing
 	.sm\:u-tracking-tight {
 		letter-spacing: -0.04em;
 	}
+	.sm\:u-tracking-normal {
+		letter-spacing: 0em;
+	}
 }
